# kubera-intel

./: .gitignore  CLAUDE.md  README.md  crontab.example  pyproject.toml
.github/workflows/: ci.yml
src/intel/: CONTEXT.md  __init__.py
src/intel/cli/: __init__.py  commands.py
src/intel/core/: CONTEXT.md  cleanup.py  config.py  credentials.py  watchlist.py
src/intel/core/analyzer/: gemini.py
src/intel/core/collectors/: CONTEXT.md  __init__.py  dart.py  news.py  youtube.py
src/intel/core/reporter/: daily.py  stock.py  templates.py
tests/: conftest.py  test_analyzer.py  test_cleanup.py  test_cli.py  test_config.py  test_credentials.py  test_daily_reporter.py  test_dart_collector.py  test_import.py  test_news_collector.py  test_stock_reporter.py  test_watchlist.py  test_youtube_collector.py
